# Check-Your-Sum

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
src/CheckYourSum/: check_your_sum.py  test.txt
src/checkYourSum/: .pylintrc  check_your_sum.py
src/project/: project.py
