[metadata]
name = 
version = 1.0.0
author = John J Kenny
author_email = johnjkenny88@gmail.com
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
# install_requires = 
    

[options.packages.find]
where = src
