[metadata]
name = Check-Your-Sum
version = 1.0.0
author = John J Kenny
author_email = johnjkenny88@gmail.com
description = Checksum Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnjkenny/Check-Your-Sum
project_urls =
    Bug Tracker = https://github.com/johnjkenny/Check-Your-Sum/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
# install_requires = 
    

[options.packages.find]
where = src
